--- a/style.css
+++ b/style.css
@@ -28,17 +28,26 @@
   position: relative;
   float: right;
   z-index: 1;
-  height: 200px;
-  width: 200px;
+  height: 240px;
+  width: 240px;
   opacity: .60;
   background-color: grey;
   color: white;
 }
 #addplaces input[type="text"] {
   background-color: black;
+  display: inline-block;
   color: white;
 }
 #addplaces input[type="submit"] {
   background-color: black;
   color:red;
+  float:right;
+}
+#addplaces p{
+  float:right;
+}
+#searchkeywords{
+  position: relative;
+  float: right;
 }
